Mon Mar 24 15:18:28 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/USAGE:

          Document the 'main_functions' configuration file setting.

        * modules/Driver.pm:
        * modules/ProjectCreator.pm:

          Support the ability to specify additional "main" functions to work
          with automatic executable project recognition.

Fri Mar 21 16:06:00 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeWorkspaceBase.pm:

          Fixed the post_workspace() parameters.  The file handle (which is
          unused in the method) was not shifted.

        * modules/WorkspaceCreator.pm:

          Provide a mechanism for creating multiple output files per
          workspace.

        * modules/WB26WorkspaceCreator.pm:

          Use the above mechanism for the wb26projects.lst file.

Thu Mar 20 15:23:06 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:

          A project will now be marked custom_only if it contains no source
          or resource files, but does contain custom input files.

Thu Mar 20 13:29:19 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          No need to use full_path for the includes. Within the workbench
          we can define the environment variables

Thu Mar 20 13:26:19 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Convert slashes on values provided to back_to_variable() to ensure
          that they match the relative values supplied implicitly through
          environment variables or explicitly through the -relative option.

Thu Mar 20 12:46:46 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:
        * modules/ProjectCreator.pm:

          Moved the recursive_includes and recursive_libpaths functionality
          out of Creator and into ProjectCreator.  In the process, I fixed
          the following bugs:
